--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
   <!-- Comment mettre une image ? -->
   <h3>Your site is on fire!</h3>
-  <img src="/images/fire.jpeg" width=500 height="350"  alt="image in fire" />
+  <img src="./images/fire.jpeg" width=500 height="350"  alt="image in fire" />
 
   <h3>How good are you at coding?</h3>
-  <img src="/images/screen.jpeg" alt="">
+  <img src="./images/screen.jpeg" alt="">
 
 
   </body>
