--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!--Titres-->
-  <h1>My first Webpage</h1>
+  <h1>My first fucking Webpage</h1>
   <h2>A magic approach to HTML</h2>
  
   <!-- backlink interne -->
