--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
   <a href="https://nathandenisse.github.io/test-jeu-asteroides/" target="_blank">Asteroide Game !</a>
 
   <br> <br>
-  <img src="/images/asteroides.png" alt="asteroides" height="300" border="10">
+  <img src="./images/asteroides.png" alt="asteroides" height="300" border="10">
 
   <br><br>
   <a href="https://studio.code.org/projects/gamelab/MTNNXUqsLW2FdMIwQXu_JAOWhruNln5p_m9wOabTECA" target="_blank">Brick-Breaker !</a>
@@ -25,6 +25,6 @@
 
   <!-- Cliquer sur l'image pour ouvrir le lien -->
   <a href="https://studio.code.org/projects/gamelab/MTNNXUqsLW2FdMIwQXu_JAOWhruNln5p_m9wOabTECA" target="_blank">
-  <img src="/images/brick-breaker.png" alt="Brick-Breaker" height="300" border="10"></a>
+  <img src="./images/brick-breaker.png" alt="Brick-Breaker" height="300" border="10"></a>
 </body>
 </html>
